sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:5: error: value - is not a member of scala.collection.immutable.Range.Inclusive
  for (i <- 0 to getNombreValeurs()-) {
                                   ^